edited title and textBox content

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>What Would Marvel Rap?</title>
+        <title>What Would Jean Grey Rap?</title>
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/style.css')}}">
         <link rel="stylesheet" type="text/plain" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     </head>
