edited title and textBox content

--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
                     <div class="content">
                         <div class="textBox">
                             <h2>Fun With Markov Chains</h2>
-                            <p>What if X-Men character Jean Grey / Phoenix started rapping in the style of your favorite song artist?</p>
+                            <p>What if X-Men character Jean Grey (aka Phoenix) started rapping in the style of your favorite song artist?</p>
                             <br>
                             <p>First, you'll find there is no one answer. Second, there's a reason why X-Men characters don't break out into song and dance like a Glee episode. Third, it doesn't hurt to explore the possibilities.</p>
                             <br>
